# cardio.ai.pro

./: .env.test  .gitignore  .pre-commit-config.yaml  .trivyignore.medical  COMANDOS_PARA_TESTAR.md  COMPREHENSIVE_TEST_REPORT.md  CORRECAO_ERRO_BACKEND.md  CORRECAO_ERRO_DATABASE.md  CORRECAO_ERRO_FAVICON.md  CORRECAO_ERRO_FRONTEND.md  CORRECAO_ERRO_FRONTEND_COMPLETA.md  CORRECAO_ERRO_INDENTACAO.md  CORRECAO_ERRO_LOGIN.md  CORRECAO_ERRO_MANIFEST.md  CORRECAO_ERRO_METADATA.md  CORRECAO_ERRO_PDF2IMAGE.md  CORRECAO_ERRO_PYTESSERACT.md  CORRECAO_ERRO_ROTAS.md  CORRECAO_MANUAL.md  CREDENCIAIS_ACESSO.md  CardioAI_Pro_Entrega_Final_Completa.md  DISTRIBUTION_GUIDE.md  Dockerfile  GUIA_COMPLETO.md  GUIA_FINAL.md  GUIA_INSTALACAO.md  GUIA_INSTALACAO_COMPLETO.md  GUIA_TESTE_PASSO_A_PASSO.md  GUIA_TESTE_RAPIDO.md  INSTALACAO-STANDALONE.md  INSTALACAO.md  INSTALLER-FIXES.md  Makefile  README-STANDALONE.md  README.md  README_INSTALACAO.md  RELATORIO_FINAL.md  REMOCAO_LOGIN.md  STATUS.md  TESTAR_AGORA.bat  (+47 more)
backend/: .coveragerc  .pip-audit.toml  0.19.0  3.10.0  7.0.0  DATASET_INTEGRATION_REPORT.md  Dockerfile  Makefile  PREPROCESSING_INTEGRATION_REPORT.md  RELATORIO_CORRECOES_FINAL.md  TESTAR_AGORA_FINAL.bat  TESTAR_DEFINITIVO.bat  apply-all-fixes-python.py  build_backend.py  cardioai-defibrillator.py  cardioai-emergency-fix.py  cardioai-fix-script.py  cardioai-quickfix.py  cardioai.db  check_admin_user.py  check_database.py  check_duplicates.py  ci_analysis_final_1749211823.md  ci_analysis_infrastructure_timeout_1749212421.md  ci_analysis_infrastructure_timeout_latest_1749213394.md  ci_analysis_mypy_errors_1749217363.md  ci_analysis_mypy_errors_step_029_1749219087.md  ci_analysis_report.md  ci_analysis_step_028_$(date +%s).md  ci_analysis_step_029_$(date +%s).md  ci_analysis_step_029_25th_failure_1749220785.md  ci_analysis_step_029_26th_failure_1749221522.md  ci_categorization_and_prioritization_10_mypy_errors_latest_$(date +%s).md  ci_categorization_and_prioritization_10_mypy_errors_latest_1749230369.md  ci_categorization_and_prioritization_11_mypy_errors_33rd_failure_$(date +%s).md  ci_categorization_and_prioritization_11_mypy_errors_latest_$(date +%s).md  ci_categorization_and_prioritization_13_mypy_errors_32nd_failure_1749227406.md  ci_categorization_and_prioritization_1749212421.md  ci_categorization_and_prioritization_1749252859.md  ci_categorization_and_prioritization_21_errors_30th_failure_$(date +%s).md  (+150 more)
backend/app/: __init__.py  main.py
backend/models/: README.md
backend/scripts/: README.md  coverage_automation.py  run_complete_setup.py  setup_datasets.py  setup_gpu_training.py  setup_models.py  test_imports.py  train_model.py
backend/tests/: conftest.py  conftest_fixed.py  medical-critical-tests.py  ml-model-service-tests.py  run_tests_with_coverage.py  test_80_coverage_final_strategic.py  test_80_percent_simple.py  test_additional_coverage_boost.py  test_advanced_ml_service_fixed.py  test_advanced_preprocessing.py  test_api_comprehensive_coverage.py  test_api_endpoints.py  test_api_endpoints_coverage.py  test_api_endpoints_full.py  test_api_endpoints_zero_coverage.py  test_api_integration.py  test_app_main.py  test_audit_trail_fixed.py  test_avatar_generator.py  test_blockchain_service.py  test_celery_complete_coverage.py  test_complete_imports_coverage.py  test_comprehensive_80_percent_coverage.py  test_comprehensive_80_percent_final.py  test_comprehensive_coverage.py  test_comprehensive_coverage_boost.py  test_comprehensive_coverage_final.py  test_comprehensive_recovery.py  test_comprehensive_regulatory_coverage.py  test_config_coverage.py  test_core_config.py  test_core_constants.py  test_core_constants.py.backup  test_core_logging.py  test_core_security.py  test_core_services_comprehensive.py  test_corrected_critical_services.py  test_coverage_boost.py  test_coverage_boost_services.py  test_coverage_maximizer.py  (+164 more)
backend/training/: README.md  __init__.py  api.py  main.py  requirements.txt
backup_20250619_171517/: .ci_refresh  .env.example  0.21.0  0.24.0  3.10.0  4.0.0  FIX_INSTRUCTIONS.md  TESTAR_INTELIGENTE.bat  apply-all-fixes-python.py  apply-all-fixes.py  apply_all_fixes.py  boost-to-80.py  cardioai-icu-protocol.py  check_database.py  check_ecg_service_class.py  corrigir-ultimos-erros.py  diagnose-indentation.py  execute-all-fixes.py  final-coverage-fix.py  fix-additional-issues.py  fix-all-tests-now.py  fix-all.bat  fix-cardioai-windows.bat  fix-indentation-error.py  fix-line-1199.py  fix-memory-monitor-class.py  fix-script-v2.py  fix-validation-exception.py  fix_all_errors.py  fix_ecg_analysis_error.py  fix_ecg_analysis_error_v2.py  fix_generate_report_indent.py  fix_path_corrected (1).py  fly_start.py  get_admin_password.py  init_db_tables.py  listar-testes-existentes.py  pyproject.toml  recover-coverage.py  run-all-fixes-final.py  (+11 more)
backup_20250619_171517/models/: ecg.py
backup_20250619_171517/scripts/: run_complete_setup.py  setup_datasets.py  train_model.py
backup_20250619_171517/tests/: test_80_percent_simple.py  test_advanced_ml_service_fixed.py  test_advanced_preprocessing.py  test_api_endpoints.py  test_api_endpoints_full.py  test_api_integration.py  test_app_main.py  test_audit_trail_fixed.py  test_basic_coverage.py  test_celery_complete_coverage.py  test_complete_imports_coverage.py  test_comprehensive_80_percent_final.py  test_comprehensive_coverage_boost.py  test_comprehensive_recovery.py  test_core_config.py  test_core_modules.py  test_coverage_boost.py  test_coverage_boost_simple.py  test_db_init.py  test_ecg_endpoints_comprehensive.py  test_ecg_preprocessing_comprehensive.py  test_ecg_service.py  test_ecg_service_critical_coverage.py  test_ecg_service_focused.py  test_ecg_service_processing.py  test_exceptions_coverage.py  test_final_1_2_percent_boost.py  test_final_58_percent_push.py  test_final_80_percent_boost.py  test_final_80_percent_push.py  test_final_coverage_80_percent.py  test_final_coverage_push.py  test_final_coverage_push_80.py  test_health.py  test_icu_minimal.py  (+24 more)
spei-emr-backend/: .env  .env.example  pyproject.toml  spei_emr.db
(+459 files in other folders)
