[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardioai"
version = "1.0.0"
description = "Sistema de Análise de ECG"
authors = [
    {name = "CardioAI Team", email = "team@cardioai.com"}
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "python-multipart==0.0.6",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.1.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["."]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

