[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
transformers = "^4.36.0"
torch = "^2.1.0"
numpy = "^1.24.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
spacy = "^3.7.0"
sentence-transformers = "^2.2.0"
pydantic = "^2.5.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.18"
aiofiles = "^23.2.1"
httpx = "^0.25.0"
redis = "^5.0.0"
celery = "^5.3.0"
cryptography = "^41.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
